--- a/header.css
+++ b/header.css
@@ -1,5 +1,5 @@
 .header {
-  background: url("../img/fondo") bottom center;
+  background: url("../img/platforms/fondo") bottom center;
   background-size: cover;
   height: 100vh;
 
