--- a/src/css/header.css
+++ b/src/css/header.css
@@ -30,8 +30,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: black;
-  background: url("../img/simple-pattern-overlay.png") top left repeat;
+  background-color: rgb(18, 19, 17);
+  background: url("../img/platforms/fondo.jpg") top left repeat;
   opacity: 0.5;
   z-index: 31;
 }
