--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,5 @@
 .header {
-  background: url("../img/fondo") bottom center;
+  background: url("../img/platforms/fondo.jpg") bottom center;
   background-size: cover;
   height: 100vh;
 
@@ -30,8 +30,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgb(18, 19, 17);
-  background: url("../img/platforms/fondo.jpg") top left repeat;
+  background-color: black;
+  background: url("../img/simple-pattern-overlay.png") top left repeat;
   opacity: 0.5;
   z-index: 31;
 }
